# katamaran

./: .envrc  .gitattributes  .gitignore  .gitlab-ci.yml  .gitpod.Dockerfile  .gitpod.yml  ARTIFACT.md  CLAUDE.md  DEBUGGING.md  Dockerfile  HACKING.md  LICENSE  MMIO_design.txt  Makefile  NotesOnShortcomings  README.md  TODOS.txt  USING.md  _CoqProject  coq-katamaran.opam  default.nix  dune-project  flake.nix  keuzes.txt
.circleci/: config.yml
.claude/: TODO.md  settings.json
.github/workflows/: nix.yaml
case_study/: .gitattributes  Assumptions.v
case_study/Cheriot/: Makefile  base.template.v  configuration.lisp  machine.template.v
case_study/InstructionExtension/: README.md
case_study/InstructionExtension/MinimalCaps/: Base.v  Contracts.v  LoopVerification.v  Machine.v  Model.v
case_study/InstructionExtension/RiscvPmp/: Base.v  Contracts.v  FemtoKernel.v  IrisInstance.v  IrisModel.v  LoopVerification.v  Machine.v  Model.v  Sig.v
case_study/MinimalCaps/: Base.v  ContractNotations.v  Contracts.v  LoopVerification.v  Machine.v  Model.v  README.md  Shallow.v  Sig.v  Types.v  Values.v  dune
case_study/MinimalCaps/BlockVer/: Spec.v  Verifier.v
case_study/MinimalCaps/Contracts/: Definitions.v  Notations.v  Statistics.v  Verification.v
case_study/RISC-V-PMP/: README.md
case_study/RiscvPmp/: .#FemtoKernel.v  Base.v  BitvectorSolve.v  BlockVerification.v  Contracts.v  FemtoKernel.v  FemtoKernelMMIO.v  GVT.v  IrisInstance.v  IrisInstanceBinary.v  IrisModel.v  IrisModelBinary.v  LoopVerification.v  LoopVerificationBinary.v  Machine.v  Model.v  ModelBinary.v  PmpCheck.v  README.md  Sig.v  Types.v  Values.v  dune  iostate.v  trace.v
case_study/RiscvPmp/BinaryBlockVer/: RunningExample.v  Spec.v  Verifier.v
case_study/RiscvPmp/BlockVer/: BinaryVerifier.v  Examples.v  PartialVerifier.v  RunningExample.v  Spec.v  TotalVerifier.v  Verifier.v
case_study/RiscvPmp/CFGVer/: Examples.v  Spec.v  Verifier.v
case_study/RiscvPmp/NIFVer/: EndToEnd.v  Examples.v
case_study/RiscvPmp/TotalBlockVer/: RunningExample.v  Spec.v  Verifier.v
case_study/RiscvPmpBoundedInts/: Base.v  Contracts.v  FemtoKernel.v  IrisInstance.v  IrisModel.v  LoopVerification.v  Machine.v  Model.v  Sig.v
case_study/patches/: README.md
examples/GVT/: Base.v  Contracts.v  GVT.v  IrisInstance.v  IrisModel.v  LoopVerification.v  Machine.v  Model.v  PartialVerifier.v  PmpCheck.v  Sig.v  Spec.v  StopButton.v
scripts/: coqsec.sh  count-loc.sh  shallow.sh  timing.sh
src/: MicroSail.v  README.md  dune-project
src/MicroSail/: Context.v  Environment.v  Notation.v  Prelude.v  Syntax.v  Tactics.v
src/iris/: lang.v
src/lib/: Ascii.ml  Ascii.mli  Base0.mli  Base1.ml  Base1.mli  BinInt.ml  BinInt.mli  BinList.ml  BinList.mli  BinNat.ml  BinNat.mli  BinOps.ml  BinOps.mli  BinPos.ml  BinPos.mli  Bitvector.ml  Bitvector.mli  BlockVerifier.mli  Bool.ml  Bool.mli  CRelationClasses.mli  Chunks.ml  Chunks.mli  Classes.ml  Classes.mli  Context.ml  Context.mli  Contracts.ml  Contracts.mli  Datatypes.ml  Datatypes.mli  DecimalString.ml  DecimalString.mli  Environment.ml  Environment.mli  EqDec.ml  EqDec.mli  EqDecInstances.ml  EqDecInstances.mli  Examples.ml  (+75 more)
test/: Append.v  CapMach.v  Example.v  ISA.v  LinkedList.v  MinimalCaps.v  Replay.v  SumMaxLen.v
theories/: .#Bitvector.v  .gitattributes  Base.v  Bitvector.v  BitvectorBase.v  BitvectorSolve.v  Context.v  Environment.v  Extraction.v  Katamaran.v  Notation.v  Notations.v  Prelude.v  Program.v  Semantics.v  Signature.v  Specification.v  Syntax.v  Tactics.v  dune
theories/Attic/: Disjoint.v  DisjointSound.v
theories/Iris/: Base.v  BinaryAdequacy.v  BinaryExamples.v  BinaryInstance.v  BinaryModel.v  BinaryResources.v  BinaryWP.v  BinaryWeakestPre.v  BinaryWp.v  Instance.v  LaterBinaryWp.v  Logic.v  Model.v  Resources.v  TotalWeakestPre.v  WeakestPre.v  cocontexts.v  cointro_patterns.v
theories/MicroSail/: RefineExecutor.v  RefineVCGen.v  ShallowExecutor.v  ShallowSoundness.v  ShallowVCGen.v  Soundness.v  SymbolicExecutor.v  SymbolicVCGen.v
theories/Refinement/: .#Monads.v  MonadInstances.v  MonadInterface.v  Monads.v  Replay.v
theories/Semantics/: Registers.v
theories/SemiConcrete/: Mutator.v  Sound.v
theories/Sep/: Hoare.v  Logic.v  Spec.v
theories/Shallow/: Executor.v  MonadInstances.v  MonadInterface.v  Monads.v  Replay.v  Soundness.v
theories/SmallStep/: Inversion.v  Progress.v  Step.v
theories/Staging/: CommandStep.v  LinearProgramming.v  LogicalSoundness.v  Monads.v  UnifLogic.v  WorldInstance.v  WorldIsomorphisms.v
theories/Symbolic/: .#UnifLogic.v  Executor.v  GenOccursCheck.v  Instantiation.v  MonadInstances.v  MonadInterface.v  Monads.v  Mutator.v  OccursCheck.v  PartialEvaluation.v  Propositions.v  Replay.v  ReplaySoundness.v  Solver.v  Sound.v  Soundness.v  UnifLogic.v  Worlds.v
theories/Syntax/: .#Chunks.v  Assertions.v  BinOps.v  Chunks.v  ContractDecl.v  Expressions.v  Formulas.v  FunDecl.v  FunDef.v  Messages.v  Patterns.v  Predicates.v  Registers.v  Statements.v  Terms.v  TypeDecl.v  TypeDef.v  TypeKit.v  Types.v  UnOps.v  Values.v  Variables.v
(+49 files in other folders)
