opam-version: "2.0"
name: "coq-katamaran"
synopsis: "Separation logic-based verification of instruction set architectures"
description: """
Katamaran is a semi-automated separation logic verifier for the Sail
specification language. It works on an embedded version of Sail called μSail and
verifies separation logic-based contracts of functions by generating (succinct)
first-order verification conditions. It further comes with a complete model
based on the Iris separation logic framework.
"""
maintainer: "steven.keuchel@vub.be"
authors: [
  "Dominique Devriese"
  "Georgy Lukyanov"
  "Sander Huyghebaert"
  "Steven Keuchel"
]
license: "BSD-2-Clause"
homepage: "https://katamaran-project.github.io/"
bug-reports: "https://github.com/katamaran-project/katamaran/issues"
dev-repo: "git+https://github.com/katamaran-project/katamaran.git"
build: [
  [make "-j%{jobs}%"]
]
install: [
  [make "install"]
]
depends: [
  "coq"           { (>= "8.14")  | (= "dev") }
  "coq-equations" { (>= "1.3")   | (= "dev") }
  "coq-iris"      { (>= "3.5.0") | (= "dev") }
  "coq-stdpp"     { (>= "1.6.0") | (= "dev") }
]
